// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizer should skip comment at the end of the line 1`] = `
Array [
  Object {
    "range": Array [0, 4],
    "raw": "done",
    "type": "Unknown",
    "value": "DONE",
  },
  Object {
    "range": Array [4, 5],
    "raw": ":",
    "type": "Colon",
    "value": ":",
  },
  Object {
    "range": Array [25, 28],
    "raw": "end",
    "type": "Unknown",
    "value": "END",
  },
]
`;

exports[`tokenizer should skip line with comment 1`] = `
Array [
  Object {
    "range": Array [20, 23],
    "raw": "end",
    "type": "Unknown",
    "value": "END",
  },
]
`;

exports[`tokenizer should skip whitespace 1`] = `
Array [
  Object {
    "range": Array [3, 7],
    "raw": "done",
    "type": "Unknown",
    "value": "DONE",
  },
  Object {
    "range": Array [7, 8],
    "raw": ":",
    "type": "Colon",
    "value": ":",
  },
  Object {
    "range": Array [11, 14],
    "raw": "end",
    "type": "Unknown",
    "value": "END",
  },
]
`;

exports[`tokenizer should tokenize address 1`] = `
Array [
  Object {
    "range": Array [0, 2],
    "raw": "[]",
    "type": "Address",
    "value": "",
  },
  Object {
    "range": Array [3, 7],
    "raw": "[00]",
    "type": "Address",
    "value": "00",
  },
  Object {
    "range": Array [8, 12],
    "raw": "[al]",
    "type": "Address",
    "value": "AL",
  },
]
`;

exports[`tokenizer should tokenize comma 1`] = `
Array [
  Object {
    "range": Array [0, 1],
    "raw": ",",
    "type": "Comma",
    "value": ",",
  },
  Object {
    "range": Array [2, 3],
    "raw": ",",
    "type": "Comma",
    "value": ",",
  },
  Object {
    "range": Array [3, 4],
    "raw": ",",
    "type": "Comma",
    "value": ",",
  },
]
`;

exports[`tokenizer should tokenize digits 1`] = `
Array [
  Object {
    "range": Array [0, 1],
    "raw": "0",
    "type": "Digits",
    "value": "0",
  },
  Object {
    "range": Array [2, 4],
    "raw": "01",
    "type": "Digits",
    "value": "01",
  },
  Object {
    "range": Array [5, 8],
    "raw": "002",
    "type": "Digits",
    "value": "002",
  },
]
`;

exports[`tokenizer should tokenize register 1`] = `
Array [
  Object {
    "range": Array [0, 2],
    "raw": "al",
    "type": "Register",
    "value": "AL",
  },
  Object {
    "range": Array [3, 5],
    "raw": "Bl",
    "type": "Register",
    "value": "BL",
  },
  Object {
    "range": Array [6, 8],
    "raw": "cL",
    "type": "Register",
    "value": "CL",
  },
  Object {
    "range": Array [9, 11],
    "raw": "DL",
    "type": "Register",
    "value": "DL",
  },
]
`;

exports[`tokenizer should tokenize string 1`] = `
Array [
  Object {
    "range": Array [0, 2],
    "raw": "\\"\\"",
    "type": "String",
    "value": "",
  },
  Object {
    "range": Array [3, 21],
    "raw": "\\"this is a string\\"",
    "type": "String",
    "value": "this is a string",
  },
]
`;
